--- a/game.html
+++ b/game.html
@@ -4,18 +4,18 @@
         <meta charset="UTF-8">
         <title> Memory Game!</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
-        <link href="assets/css/game.css" rel="stylesheet">
-        <link href="assets/css/global.css" rel="stylesheet">
+        <link href="css/game.css" rel="stylesheet">
+        <link href="css/global.css" rel="stylesheet">
     </head>
 
-    <body>
+    <body style="background-color: darkred">
 
         <div class="parent" style="background-color: red">
 
             <div class="title" style="background-color: orange">
             <!-- TODO: Username dynamisch inzetten -->
             <!-- TODO: Link naar home -->
-                <h1> Memory Game </h1>
+                <a href="index.html"> <h1> Memory Game </h1> </a>
             </div>
 
             <div class="pairs" style="background-color: yellow">
@@ -75,29 +75,16 @@
             </div>
 
             <div class="footer" style="background-color: deeppink">
-                    <p> Made by: Gustavo Costa Araujo </p>
-                    <p> Version: 1.0 </p>
+                <p>&copy; 2025 Gustavo Henrique Costa Araujo <br>
+                    Hanze, HBO-ICT, Software Engineering <br>
+                    Webtechnologies III
+                </p>
             </div>
 
         </div>
 
     </body>
 
-    <script src="assets/js/memory.js"></script>
+    <script src="assets/js/memory.js" type="module"></script>
 
 </html>
-
-
-<!--            <div class="top5" style="background-color: blue">-->
-<!--                <h2>Top five</h2>-->
-
-<!--                <ol>-->
-<!--                    <li> Gustavo Costa Araujo: 200</li>-->
-<!--                    <li> Bart Barnard: 250</li>-->
-<!--                    <li> Collin Spaeny: 300</li>-->
-<!--                    <li> Ewoud De Boer: 400</li>-->
-<!--                    <li> Harald Rietdijk: 500</li>-->
-<!--                </ol>-->
-
-<!--                <p> Average playtime: 0s (64s)</p>-->
-<!--            </div>-->
