Add timer functionality and display for Memory Game

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 
             <div class="pairs" style="background-color: yellow">
                 <p id="pairsFound"> Pairs Found: ... </p>
+                <p id="pairsLeft"> Pairs Left: ... </p>
+                <p id="timer"> Time: ... </p>
             </div>
 
             <div class="remainingTime" style="background-color: green">
