Enhance card game UI and functionality with CSS updates and event listeners

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <link href="css/global.css" rel="stylesheet">
     </head>
 
+    <!-- TODO: Fix the desktop views in the CSS -->
+
     <body>
 
         <div class="parentIndex" id="index" style="background-color: red">
@@ -67,7 +69,7 @@
 
                 <br>
 
-                <button name="cardColor"> Gevonden</button>
+                <button name="cardColor"> Found</button>
                 <label for="closed"></label>
                 <input id="closed" type="color">
             </div>
