Implements #6 :Refactor Memory Game logic and UI elements, including card matching functionality and color input updates

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                 <br>
 
                 <button name="cardColor"> Found</button>
-                <label for="closed"></label>
-                <input id="closed" type="color">
+                <label for="found"></label>
+                <input id="found" type="color">
             </div>
 
             <div class="startButton" style="background-color: purple">
@@ -92,9 +92,8 @@
                 <a href="index.html"> <h1> Memory Game </h1> </a>
             </div>
 
-            <div class="pairs" style="background-color: yellow">
+            <div class="info" style="background-color: yellow">
                 <p id="pairsFound"> Pairs Found: ... </p>
-                <p id="pairsLeft"> Pairs Left: ... </p>
                 <p id="timer"> Time: ... </p>
             </div>
 
