--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Memory Game!</title>
-        <meta content="width=device-width, initial-scale=1.0" name="viewport">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link href="css/index.css" rel="stylesheet">
         <link href="css/global.css" rel="stylesheet">
     </head>
-
-    <!-- TODO: Fix the desktop views in the CSS -->
 
     <body>
 
@@ -21,11 +19,7 @@
             <div class="top5" style="background-color: yellow">
                 <h2>Top five</h2>
                 <ol>
-                    <li> Gustavo Costa Araujo: 200</li>
-                    <li> Bart Barnard: 250</li>
-                    <li> Collin Spaeny: 300</li>
-                    <li> Ewoud De Boer: 400</li>
-                    <li> Harald Rietdijk: 500</li>
+
                 </ol>
             </div>
 
@@ -33,8 +27,6 @@
                 <label for="username"> Username </label>
                 <br>
                 <input id="username" placeholder="Enter your name" type="text">
-                <br>
-                <button id="submit"> Submit</button>
             </div>
 
             <div class="decorations" style="background-color: blue">
@@ -110,8 +102,8 @@
             </div>
 
             <div class="gameControls" style="background-color: purple">
-                <button class="newGame" type="reset">New Game</button>
-                <button class="saveScore" type="submit">Save Score</button>
+                <!-- New Game button moved to modal -->
+                <button id="forfeitButton">Forfeit</button>
             </div>
 
             <div class="footer" style="background-color: deeppink">
@@ -123,8 +115,18 @@
 
         </div>
 
+        <div id="endGameModal" class="modal" style="display:none;">
+          <div class="modal-content">
+            <span id="closeModal" class="close">&times;</span>
+            <h2>Congratulations!</h2>
+            <p id="modalMessage"></p>
+            <button id="saveScoreModalBtn">Save Score</button>
+            <button id="newGameModalBtn">New Game</button>
+          </div>
+        </div>
+
     </body>
 
-    <script src="js/main.js" type="module"></script>
+    <script src="js/script.js" type="module"></script>
 
 </html>
